--- a/src/partials/vite-promo.html
+++ b/src/partials/vite-promo.html
@@ -1,34 +1,36 @@
 <section class="vite-promo">
   <div class="container">
     <div class="vite-promo-thumb">
-      <a
-        class="vite-promo-link"
-        href="https://vitejs.dev/"
-        target="_blank"
-        rel="noopener noreferrer"
-        aria-label="Link to Vite official website"
-        title="Vite.js  build tool"
-      >
-        <!-- Path to images as from index.html file -->
-        <img
-          class="pic"
-          src="img/vite-logo.png"
-          alt="Vite logo"
-          width="640"
-          height="640"
-        />
-      </a>
+      <div class="vite-promo-thumb-container">
+        <a
+          class="vite-promo-link"
+          href="https://github.com/Veron0013/"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Link to Github"
+          title="my git"
+        >
+          <!-- Path to images as from index.html file -->
+          <img
+            class="pic"
+            src="/img/ava_min.jpg"
+            alt="My logo"
+            width="640"
+            height="640"
+          />
+        </a>
+      </div>
     </div>
     <h1 class="main-title">
-      <span class="main-title-gradient">Vite</span>
-      Template by
+      <span class="main-title-gradient">HOMEWORK 10</span>
+      by
       <a
         class="main-title-link"
-        href="https://github.com/goitacademy/vanilla-app-template"
+        href="https://github.com/Veron0013/"
         target="_blank"
         rel="noopener noreferrer"
       >
-        GoIT
+        Igor Vdovyka
       </a>
     </h1>
   </div>
